# app-prestamos-python-version

./: pyproject.toml
src/: main.py
src/app/clients/: clientService.py
src/app/loans/: loanService.py
src/domain/client/: Client.py  client_repository.py
src/domain/loan/: Loan.py  loan_repository.py  transaction_repository.py
src/infraestructure/: database.sqlite
src/infraestructure/config/: database.py
src/infraestructure/controller/: client.py  health_cheack.py  loan.py  transaction.py
src/infraestructure/controller/exceptions/: custon_exceptions.py  error_handler.py
src/infraestructure/models/: Frecuency.py  client.py  loan.py
tests/: test_main.py
tests/infraestruture/controller/: test_client.py
